# TyperBot

./: .env.example  .windsurfrules  README.md  justfile  pyproject.toml
hooks/: pre-commit
src/typerbot/: __init__.py  chat.py  cli.py
tests/test_typerbot/: __init__.py
