[project]
name = "typerbot"
version = "0.1.0"
description = "A terminal-based chatbot using Typer and LangChain"
authors = []
dependencies = [
    "typer>=0.9.0",
    "langchain>=0.1.0",
    "anthropic>=0.7.0",
    "rich>=13.7.0",
    "pytest-cov>=6.0.0",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "ruff>=0.3.0", "pyright>=1.1.350"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "PL",  # pylint
    "RUF", # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
force-single-line = true
section-order = ["standard-library", "third-party", "first-party"]
combine-as-imports = false

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = true
reportUnknownParameterType = true
reportUnknownVariableType = true
reportUnknownArgumentType = true
reportPrivateUsage = true
reportUntypedFunctionDecorator = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=typerbot --cov-report=term-missing"
testpaths = ["tests"]
